@@ -996,6 +996,7 @@ public class NXCPCodes
    public static final long VID_ACTION_LIST = 606;
    public static final long VID_ZONE_SNMP_PORT_COUNT = 607;
    public static final long VID_INCLUDE_RAW_VALUES = 608;
+   public static final long VID_JOB_CANCELED = 609;
 
 	public static final long VID_ACL_USER_BASE = 0x00001000L;
 	public static final long VID_ACL_USER_LAST = 0x00001FFFL;
